log
Wed, Mar 19, 2025  8:29:07 AM: 
 tests:  1|4
total_score: 10/70
3f6cb15
Wed, Mar 19, 2025  8:40:07 AM: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|5
total_score: 0/70
aad46f8
Wed, Mar 19, 2025  8:41:21 AM: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:20: error: lvalue required as unary '&' operand
       pushFront(L, &((*(int *)i+1)));
                    ^
Compilation failed
9e1c963
Wed, Mar 19, 2025  8:42:24 AM: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
793d951
Wed, Mar 19, 2025  8:47:48 AM: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
035a805
Wed, Mar 19, 2025  8:48:41 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4cfbc81
Wed, Mar 19, 2025  8:51:05 AM: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:13: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       valor = i+1;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
9221c34
Wed, Mar 19, 2025  8:51:51 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:13: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       valor = i+1;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
b7dc9ce
Wed, Mar 19, 2025  8:52:11 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
ff71baf
Wed, Mar 19, 2025  8:53:27 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
d19d84b
Wed, Mar 19, 2025  8:59:26 AM: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:60:19: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int elemento = first(L);
                   ^~~~~
exercises.c:61:20: error: array subscript is not an integer
    int suma = first[L]
                    ^
exercises.c:62:4: error: expected ',' or ';' before 'while'
    while(elemento != NULL){
    ^~~~~
exercises.c:61:8: error: unused variable 'suma' [-Werror=unused-variable]
    int suma = first[L]
        ^~~~
exercises.c:60:8: error: unused variable 'elemento' [-Werror=unused-variable]
    int elemento = first(L);
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6007331
Wed, Mar 19, 2025  8:59:40 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:60:19: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int elemento = first(L);
                   ^~~~~
exercises.c:62:19: error: comparison between pointer and integer [-Werror]
    while(elemento != NULL){
                   ^~
exercises.c:64:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       elemento = next(L);
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
07ee46c
Wed, Mar 19, 2025  9:00:28 AM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:19: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       (*elemento) = next(L);
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
596c92a
Wed, Mar 19, 2025  9:02:41 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
fb4dc87
